--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Rust
+name: Build
 
 on:
   push:
@@ -17,10 +17,12 @@ jobs:
         os: [ubuntu-latest, windows-latest, macOS-latest]
         rust: [stable]
         include:
+          - os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+          - os: windows-latest
+            target: x86_64-pc-windows-msvc
           - os: macOS-latest
-            rust: stable
             target: aarch64-apple-darwin
-            install_rust_target: true
 
     steps:
       - uses: actions/checkout@v2
