--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,10 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: sudo apt-get update && sudo apt-get install -y libasound2-dev pkg-config
 
+      - name: Install dependencies (macOS)
+        if: matrix.os == 'macOS-latest'
+        run: rustup target add aarch64-apple-darwin
+
       - name: Build
         run: cargo build --release --target ${{ matrix.target }}
         env:
